# StraightenedSpiralArmDetector

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DetectoratorOfStringsOfGalaxies  How to use.txt  Makefile  README.md  StraightSpiralArmsDetector.sln  best.txt  cmake_install.cmake  config.txt  config_hubble.txt  config_sdss9.txt  detectorator  detectorator.cpp  processed_params.xml  test.cpp  zhangSuen.hpp
DLL/Configurator/: Configurator.vcxproj  Configurator.vcxproj.filters  configurator.cpp  configurator.hpp
DLL/ModelUtils/: ModelUtils.vcxproj  ModelUtils.vcxproj.filters  converters.cpp  converters.hpp  model_utils.hpp  odd_even_checker.cpp  odd_even_checker.hpp  src_files_handler.cpp  src_files_handler.hpp
DLL/ProcessedImage/: ProcessedImage.vcxproj  ProcessedImage.vcxproj.filters  processed_image.cpp  processed_image.hpp
DLL/ThreadPool/: ThreadPool.vcxproj  ThreadPool.vcxproj.filters  thread_pool.cpp  thread_pool.hpp
DLL/UiUtils/: UiUtils.vcxproj  UiUtils.vcxproj.filters  grid_empty_cell.cpp  grid_empty_cell.hpp  static_text_fonts.cpp  static_text_fonts.hpp  ui_utils.hpp
DLL/ZhangSuenMethod/: ZhangSuenMethod.vcxproj  ZhangSuenMethod.vcxproj.filters  zhang_suen.cpp  zhang_suen.hpp
SSADLauncher/: SSADLauncher.lpi  SSADLauncher.lpr  ini_handler.pas  main_form.lfm  main_form.lrj  main_form.pas
SSADLauncher/languages/: SSADLauncher.mo  SSADLauncher.pot  SSADLauncher.ru.po
StraightSpiralArmsDetector/: StraightSpiralArmsDetector.rc  StraightSpiralArmsDetector.vcxproj  StraightSpiralArmsDetector.vcxproj.filters  resource.h
StraightSpiralArmsDetector/src/: app.cpp  app.hpp
UserManual/: UserManualEN.markdown  UserManualRU.markdown
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  classdetectorator__namespace_1_1_detectorator-members.html  classdetectorator__namespace_1_1_detectorator.html  classdetectorator__namespace_1_1_detectorator.js  classdetectorator__namespace_1_1_detectorator_a07d1f996620af699dc7ae5f0a49826fe_icgraph.map  classdetectorator__namespace_1_1_detectorator_a07d1f996620af699dc7ae5f0a49826fe_icgraph.md5  classdetectorator__namespace_1_1_detectorator_a1a6e530e00bd8bdcff3318e198900907_cgraph.map  classdetectorator__namespace_1_1_detectorator_a1a6e530e00bd8bdcff3318e198900907_cgraph.md5  classdetectorator__namespace_1_1_detectorator_a1a6e530e00bd8bdcff3318e198900907_icgraph.md5  classdetectorator__namespace_1_1_detectorator_a3c6c29ae03cb83c997fa84ed791a1e28_icgraph.map  classes.html  (+53 more)
i18n/: 1_xgettext.bat  2_msginit_create.bat  2_msgmerge_update.bat  3_msgfmt.bat  src_files.txt
lib/: adaptive_zhang_suen.cpp  aliases.hpp  detectorator.cpp  detectorator.hpp  utils.cpp  utils.hpp  zhangSuen.cpp  zhangSuen.hpp  zhang_suen.cpp
src/: CMakeLists.txt  Makefile  aliases.h  app.cpp  common_functions.cpp  common_functions.h  config.cpp  config.h  detectorator.cpp  detectorator.h  detectorator_utils.cpp  detectorator_utils.h  main.cpp  processed_data.cpp  processed_data.h  processed_parameters.cpp  processed_parameters.h  skeletonization_zhang_suen.cpp  skeletonization_zhang_suen.h  zhang_suen.cpp  zhang_suen.h
src/controller/: CMakeLists.txt  app_main_window_controller.cpp  app_main_window_controller.hpp  bitmap_control_panel_controller.cpp  bitmap_control_panel_controller.hpp  detectorator_control_panel_controller.cpp  detectorator_control_panel_controller.hpp  i_controller.hpp  image_rotate_scale_frame_controller.cpp  image_rotate_scale_frame_controller.hpp
src/detectorator/: adaptive_zhang_suen.hpp  aliases.h  commonFunctions.cpp  commonFunctions.hpp  common_functions.cpp  common_functions.h  common_functions.hpp  detectorator.cpp  detectorator.h  detectorator.hpp  zhangSuen.cpp  zhang_suen.cpp  zhang_suen.h  zhang_suen.hpp
src/frames/: AppMainWindow.cpp  AppMainWindow.h
src/model/: CMakeLists.txt  buffered_bitmap.cpp  buffered_bitmap.hpp  converters.cpp  converters.hpp  processed_image.cpp  processed_image.hpp  test.cpp  test.hpp
src/model/detectorator/: CMakeLists.txt  adaptive_zhang_suen.cpp  detectorator.cpp  zhang_suen.hpp
src/view/: CMakeLists.txt  appMainWindow.cpp  appMainWindow.hpp  app_main_window.cpp  app_main_window.hpp  bitmap_control_panel.cpp  bitmap_control_panel.hpp  buffered_bitmap.hpp  detectorator_control_panel.cpp  detectorator_control_panel.hpp  ids_of_controls.hpp  image_rotate_scale_frame.cpp  image_rotate_scale_frame.hpp
(+119 files in other folders)
